testsuite/tests/typecheck/should_fail/T2534.stderr
T2534.hs:3:19: error: [GHC-83865]
    • Couldn't match expected type: t -> t -> b
                  with actual type: [a0]
    • In the second argument of ‘foldr’, namely ‘[]’
      In the expression: foldr (>>=) [] []
      In an equation for ‘foo’: foo = foldr (>>=) [] []
    • Relevant bindings include
        foo :: t -> t -> b (bound at T2534.hs:3:1)

